@@ -28,6 +28,9 @@
 
 	[kennykb_numerics_branch]
 
+	* generic/tclStrToD.c:	Bug fix: set shift magnitude properly whether
+	we're expanding to mp_int type or not.
+
 	* generic/tclExecute.c:	Bug fix: ACCEPT_NAN under INST_UMINUS.
 
 	* generic/tclStrToD.c:	New macros TIP_114_FORMATS and KILL_OCTAL to
